<resources>
    <string name="app_name">TestBottomNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_form">Form</string>

    <string name="title_about">About</string>
    <string name="title_main">Main</string>
    <string name="title_title">Title</string>
    <string name="title_side">Side</string>
    <string name="title_login">Login</string>
    <string name="title_registered">Registered</string>
    <string name="title_leader_board">Leaderboard</string>
    <string name="title_board_next">BoardNext</string>
    <string name="title_profile">Profile</string>
</resources>