<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    app:startDestination="@id/title_fragment">

<!--action으로 argument 보내기-->
    <fragment
        android:id="@+id/title_fragment"
        android:name="kr.co.yeeun.lee.demoi.testbottomnavigation.homescreen.TitleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_title_to_side"
            app:destination="@+id/side_fragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>

    <fragment
        android:id="@+id/side_fragment"
        android:name="kr.co.yeeun.lee.demoi.testbottomnavigation.homescreen.SideFragment"
        android:label="@string/title_side"
        tools:layout="@layout/fragment_side">
        <action
            android:id="@+id/action_side_to_about"
            app:destination="@+id/about_fragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <argument
            android:name="value"
            android:defaultValue="@null"
            app:argType="kr.co.yeeun.lee.demoi.testbottomnavigation.Item"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/about_fragment"
        android:name="kr.co.yeeun.lee.demoi.testbottomnavigation.homescreen.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_about_to_title"
            app:destination="@+id/title_fragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/title_fragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
</navigation>